big-feat: reworked architecture + added alias

--- a/src/components/List/Directory.module.scss
+++ b/src/components/List/Directory.module.scss
@@ -8,6 +8,6 @@ $border-radius: 5px;
 
 .top {
   width: $size;
-  height: $size / 2.5;
+  height: calc($size / 2.5);
   border-radius: 2px $border-radius 0 0;
 }
