feat: completed contacts section

--- a/src/components/TermCursor/TermCursor.module.scss
+++ b/src/components/TermCursor/TermCursor.module.scss
@@ -3,6 +3,10 @@
   font-weight: 600;
 }
 
+.highlight-prefix {
+  color: var(--color-peach);
+}
+
 .highlight-error {
   color: var(--color-red);
   font-weight: 600;
