biiiiig feat: added paralax mapping

--- a/src/components/TermCursor/TermCursor.module.scss
+++ b/src/components/TermCursor/TermCursor.module.scss
@@ -1,3 +1,9 @@
+.term-cursor {
+  position: absolute;
+  left: 20px;
+  top: 40px;
+}
+
 .highlight-success {
   color: var(--color-green);
   font-weight: 600;
