--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,3 +2,23 @@
   max-width: 1300px;
   font-size: 18px;
 }
+
+.stack-area {
+  width: 100%;
+  height: 720vh;
+}
+
+.stack-container {
+  height: 100vh;
+  max-width: 1300px;
+  position: sticky;
+  top: 0;
+  margin: 0 auto;
+}
+
+.section {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+}
