--- a/src/components/Term/Term.module.scss
+++ b/src/components/Term/Term.module.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: relative;
   padding: 40px 15px 15px 15px;
+  height: 65vh;
 }
 
 .term {
@@ -36,5 +37,13 @@
       bottom: 15px;
       left: 65px;
     }
+  }
+  .term-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
