--- a/src/sections/About/About.module.scss
+++ b/src/sections/About/About.module.scss
@@ -6,4 +6,29 @@
       margin-right: 2px;
     }
   }
+
+  .term-split {
+    width: 0;
+    padding: 0;
+  }
+
+  hr {
+    border: none;
+    border-bottom: 2px dashed var(--color-text);
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .about-content > * {
+    transition:
+      opacity 0.3s ease-in-out,
+      transform 0.2s ease-in-out;
+    transform: translateY(20px);
+    opacity: 0;
+  }
+
+  .about-content.open > * {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
