feat: small prettiers

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,9 +11,35 @@
 .stack-container {
   height: 100vh;
   max-width: 1300px;
+  position: relative;
+  margin: 0 auto;
   position: sticky;
   top: 0;
-  margin: 0 auto;
+}
+
+.stack-bg {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+
+  background: var(--color-base);
+  --gap: 10em;
+  --line: 1px;
+  --color: var(--color-crust);
+
+  background-image: linear-gradient(
+      -90deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    ),
+    linear-gradient(
+      0deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    );
+  background-size: var(--gap) var(--gap);
 }
 
 .section {
