--- a/src/sections/Stack/Stack.module.scss
+++ b/src/sections/Stack/Stack.module.scss
@@ -1,3 +1,11 @@
+.stack {
+  font-size: clamp(16px, 1.5vw, 18px);
+
+  @media (max-width: 768px) {
+    font-size: clamp(10px, 2vw, 12px);
+  }
+}
+
 .skills {
   transition:
     opacity 0.3s ease-in-out,
