feat: added light theme + some fixes

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -25,7 +25,7 @@
   background: var(--color-base);
   --gap: 10em;
   --line: 1px;
-  --color: var(--color-crust);
+  --color: var(--color-surface1);
 
   animation: bg-animate 10s infinite linear;
 
