--- a/src/components/Typewriter/Typewriter.module.scss
+++ b/src/components/Typewriter/Typewriter.module.scss
@@ -1,30 +1,33 @@
 .typewriter {
-  display: inline;
-  overflow: hidden;
-  height: 100%;
-  background: linear-gradient(to right, var(--color-text), var(--color-mauve));
-  background-clip: text;
+  display                : inline;
+  overflow               : hidden;
+  height                 : 100%;
+  background             : linear-gradient(to right, var(--color-text), var(--color-mauve));
+  background-clip        : text;
   -webkit-text-fill-color: transparent;
 }
 
 .cursor {
-  display: inline-block;
-  width: 6px;
-  height: clamp(20px, 10vw, 120px);
-  background: var(--color-text);
-  margin-left: 2px;
+  display      : inline-block;
+  width        : 6px;
+  height       : inherit;
+  background   : var(--color-text);
+  margin-left  : 2px;
   border-radius: 4px;
+
   &.blink {
-    animation: pulse 1s infinite ease-in-out;
+    animation      : pulse 1s infinite ease-in-out;
     animation-delay: 0.5s;
   }
 }
 
 @keyframes pulse {
+
   0%,
   100% {
     transform: scaleY(1);
   }
+
   40%,
   60% {
     transform: scaleY(0);
