--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -28,53 +28,64 @@
 
 
 .about {
-  height: 100vh;
-  width : 100%;
+  width        : 100%;
+  margin-bottom: 25vh;
 
   .about-container {
     display        : flex;
     flex-direction : column;
     justify-content: center;
   }
+}
 
+.webview {
+  padding: 50px;
+  width  : 100%;
 
-  .title {
-    font-family: 'San Francisco Rounded', ;
-    font-size  : clamp(32px, 15vw, 60px);
-    font-weight: 600;
-    text-align : center;
-  }
+  .content {
+    display: flex;
 
-  .webview {
-    padding: 10px;
-    width  : 100%;
+    .text {
+      max-width   : 55%;
+      font-size   : 24px;
+      margin-right: auto;
 
-    .content {
-      display: flex;
-      padding: 40px;
-
-      .text {
-        max-width   : 55%;
-        font-size   : 24px;
-        margin-right: auto;
-
-        p {
-          margin-bottom: 10px;
-        }
-      }
-
-
-
-      .highlight {
-        color      : var(--color-mauve);
-        font-weight: 600;
+      p {
+        margin-bottom: 10px;
       }
     }
 
-    .img {
-      background-color: var(--color-mantle);
-      border-radius   : 15px;
+
+
+    .highlight {
+      color      : var(--color-mauve);
+      font-weight: 600;
     }
   }
 
+  .img {
+    background-color: var(--color-mantle);
+    border-radius   : 15px;
+  }
+}
+
+.title {
+  font-family: 'San Francisco Rounded', ;
+  font-size  : clamp(32px, 15vw, 60px);
+  font-weight: 600;
+  text-align : center;
+}
+
+.stack {
+  height: 100vh;
+
+  .subtitle {
+    font-size  : clamp(24px, 3vw, 32px);
+    font-weight: 500;
+  }
+
+  .skillName {
+    font-size  : 18px;
+    font-weight: 500;
+  }
 }
