--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -77,7 +77,8 @@
 }
 
 .stack {
-  height: 100vh;
+  width        : 100%;
+  margin-bottom: 25vh;
 
   .subtitle {
     font-size  : clamp(24px, 3vw, 32px);
@@ -87,5 +88,22 @@
   .skillName {
     font-size  : 18px;
     font-weight: 500;
+  }
+
+  .hint {
+    font-size  : 14px;
+    font-weight: 400;
+    opacity    : 0.8;
+  }
+}
+
+.projects {
+  width        : 100%;
+  margin-bottom: 25vh;
+
+  .content {
+    display       : flex;
+    flex-direction: column;
+    gap           : 20px;
   }
 }
