--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -11,6 +11,7 @@
   display        : flex;
   justify-content: center;
   align-items    : center;
+  margin-bottom  : 10vh;
 
   .title {
     font-family: 'San Francisco Mono', 'San Francisco';
