--- a/src/components/ProjectList/ProjectCard.module.scss
+++ b/src/components/ProjectList/ProjectCard.module.scss
@@ -2,7 +2,7 @@
   padding         : 16px;
   border-radius   : 8px;
   box-shadow      : 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: var(--color-mantle);
+  background-color: var(--color-base);
   display         : flex;
   gap             : 16px;
   justify-content : space-between;
@@ -49,12 +49,12 @@
 
 
 .title {
-  font-size  : 1.25rem;
+  font-size  : clamp(24px, 3vw, 32px);
   font-weight: 600;
 }
 
 .description {
-  font-size : 0.875rem;
+  font-size : clamp(16px, 3vw, 24px);
   margin-top: 4px;
 }
 
@@ -65,19 +65,19 @@
 }
 
 .finished {
-  color: var(--color-green);
+  background-color: var(--color-green);
 }
 
 .inProgress {
-  color: var(--color-yellow);
+  background-color: var(--color-yellow);
 }
 
 .cancelled {
-  color: var(--color-red);
+  background-color: var(--color-red);
 }
 
 .active {
-  color: var(--color-blue);
+  background-color: var(--color-blue);
 }
 
 button {
@@ -86,6 +86,7 @@ button {
   width        : 100%;
   cursor       : pointer;
   transition   : 0.2s ease-in-out;
+  font-size    : clamp(16px, 3vw, 24px);
 }
 
 .btn {
@@ -123,7 +124,9 @@ button {
 }
 
 .status {
-  margin-top : 8px;
-  font-size  : 0.875rem;
-  font-weight: bold;
+  padding      : 3px 10px;
+  border-radius: 5px;
+  color        : var(--color-base);
+  font-size    : clamp(16px, 3vw, 24px);
+  font-weight  : 600;
 }
