feat: added rwd

--- a/src/components/MacIcon/MacIconWrapper.module.scss
+++ b/src/components/MacIcon/MacIconWrapper.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   // background   : linear-gradient(180deg, var(--color-dock-icon-background) 0%, var(--color-mauve-tr) 100%);
 
-  background     : var(--color-dock-icon-background);
+  background     : var(--color-base);
   padding        : 10px;
   color          : var(--color-mauve);
   height         : 100%;
