--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -2,6 +2,11 @@
   max-width  : 1300px;
   margin     : 0 auto;
   font-family: 'San Francisco', 'Geist Sans', sans-serif;
+  padding    : 10px;
+}
+
+section:not(.hero) {
+  margin-bottom: 10vh;
 }
 
 .hero {
@@ -25,22 +30,19 @@
 
   .title {
     font-family: 'San Francisco Mono', 'San Francisco';
-    font-size  : clamp(32px, 15vw, 60px);
-    font-weight: 500;
+
   }
 
   .description {
-    margin-top : -50px;
     font-family: 'San Francisco Mono', 'San Francisco';
-    font-size  : clamp(24px, 3vw, 32px);
+    font-size  : clamp(16px, 3vw, 32px);
     font-weight: 400;
   }
 }
 
 
 .about {
-  width        : 100%;
-  margin-bottom: 25vh;
+  width: 100%;
 
   .about-container {
     display        : flex;
@@ -57,7 +59,7 @@
     display: flex;
 
     .text {
-      max-width   : 55%;
+      width       : 100%;
       font-size   : 24px;
       margin-right: auto;
 
@@ -77,6 +79,7 @@
   .img {
     background-color: var(--color-mantle);
     border-radius   : 15px;
+    width           : 100%;
   }
 }
 
@@ -88,16 +91,16 @@
 }
 
 .stack {
-  width        : 100%;
-  margin-bottom: 25vh;
+  width: 100%;
 
   .subtitle {
     font-size  : clamp(24px, 3vw, 32px);
     font-weight: 500;
+    font-family: 'San Francisco Rounded', ;
   }
 
   .skillName {
-    font-size  : 18px;
+    font-size  : clamp(18px, 3vw, 24px);
     font-weight: 500;
   }
 
@@ -109,8 +112,7 @@
 }
 
 .projects {
-  width        : 100%;
-  margin-bottom: 25vh;
+  width: 100%;
 
   .content {
     display       : flex;
@@ -120,12 +122,18 @@
 }
 
 .contacts {
+  width: 100%;
+
   .content {
     display       : flex;
     flex-direction: column;
   }
 
-  width         : 100%;
-  margin-bottom : 10vh;
-
+  .iconItem {
+    width        : 100%;
+    height       : 100%;
+    aspect-ratio : 1;
+    border-radius: 25px;
+    overflow     : hidden;
+  }
 }
