--- a/src/components/Dock/Dock.module.scss
+++ b/src/components/Dock/Dock.module.scss
@@ -64,15 +64,12 @@
 }
 
 .app a {
-  width        : 100%;
-  height       : 100%;
-  display      : block;
-  border-radius: 12px;
-  overflow     : hidden;
+  width  : 100%;
+  height : 100%;
+  display: block;
 }
 
-.app:hover .tooltip,
-.app:focus-within .tooltip {
+.app:hover .tooltip {
   opacity: 1;
 }
 
