--- a/src/sections/About/About.module.scss
+++ b/src/sections/About/About.module.scss
@@ -1,41 +1,41 @@
 .about {
-  .list {
-    & li::before {
-      content: "-";
-      padding-left: 5px;
-      margin-right: 2px;
+  width: 100%;
+
+  .title {
+    font-family: 'San Francisco Rounded', ;
+    font-size  : clamp(32px, 15vw, 60px);
+    font-weight: 600;
+    text-align : center;
+  }
+
+  .about-container {
+    display        : flex;
+    flex-direction : column;
+    justify-content: center;
+  }
+
+
+
+  .text {
+    width       : 100%;
+    font-size   : 24px;
+    margin-right: auto;
+
+    p {
+      margin-bottom: 10px;
     }
   }
 
-  .term-split {
-    width: 0;
-    padding: 0;
-    @media (max-width: 768px) {
-      display: none;
-    }
-  }
 
-  hr {
-    border: none;
-    border-bottom: 2px dashed var(--color-text);
-    width: 100%;
-    margin: 10px 0;
-    @media (max-width: 768px) {
-      margin: 3px 0;
-    }
-  }
 
-  .about-content > * {
-    font-size: clamp(14px, 2vw, 18px);
-    transition:
-      opacity 0.3s ease-in-out,
-      transform 0.2s ease-in-out;
-    transform: translateY(20px);
-    opacity: 0;
+  strong {
+    color      : var(--color-mauve);
+    font-weight: 600;
   }
+}
 
-  .about-content.open > * {
-    opacity: 1;
-    transform: translateY(0px);
-  }
+.img {
+  background-color: var(--color-mantle);
+  border-radius   : 15px;
+  width           : 100%;
 }
