--- a/src/sections/Projects/Projects.module.scss
+++ b/src/sections/Projects/Projects.module.scss
@@ -1,36 +1,9 @@
 .projects {
-  font-size: clamp(16px, 1.5vw, 18px);
-  transition:
-    opacity 0.3s ease-in-out,
-    transform 0.2s ease-in-out;
-  transform: translateY(20px);
-  opacity: 0;
-
-  @media (max-width: 768px) {
-    font-size: clamp(10px, 2vw, 12px);
-    margin-bottom: auto;
-  }
-}
-.open {
-  opacity: 1;
-  transform: translateY(0px);
-}
-
-.term-container {
-  height: 97vh;
-
-  @media (width >= 80rem) {
-    height: 80vh;
-  }
-}
-
-.projects-term {
-  height: 100%;
   width: 100%;
-}
 
-.contacts-term {
-  height: 100%;
-  width: 100%;
-  font-size: clamp(14px, 1.5vw, 18px);
+  .content {
+    display       : flex;
+    flex-direction: column;
+    gap           : 20px;
+  }
 }
