--- a/src/sections/Stack/Stack.module.scss
+++ b/src/sections/Stack/Stack.module.scss
@@ -1,17 +1,21 @@
-.skills {
-  font-size: clamp(16px, 1.5vw, 18px);
-  transition:
-    opacity 0.3s ease-in-out,
-    transform 0.2s ease-in-out;
-  transform: translateY(20px);
-  opacity  : 0;
+.stack {
+  width: 100%;
 
-  @media (max-width: 768px) {
-    font-size: clamp(10px, 2vw, 12px);
+
+  .subtitle {
+    font-size  : clamp(24px, 3vw, 32px);
+    font-weight: 500;
+    font-family: 'San Francisco Rounded', ;
   }
-}
 
-.open {
-  opacity  : 1;
-  transform: translateY(0px);
+  .skillName {
+    font-size  : clamp(18px, 3vw, 24px);
+    font-weight: 500;
+  }
+
+  .hint {
+    font-size  : 14px;
+    font-weight: 400;
+    opacity    : 0.8;
+  }
 }
