--- a/src/components/Project/ProjectCard/ProjectCard.module.scss
+++ b/src/components/Project/ProjectCard/ProjectCard.module.scss
@@ -8,6 +8,14 @@
   justify-content : space-between;
   position        : relative;
 
+  transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), box-shadow 0.1s ease-in-out;
+
+  &:hover {
+    transform : scale(1.02);
+    box-shadow: 0 0 15px var(--color-mauve-tr);
+    z-index   : 2;
+  }
+
   .preview {
     width        : 100%;
     position     : relative;
