--- a/src/sections/Contacts/Contacts.module.scss
+++ b/src/sections/Contacts/Contacts.module.scss
@@ -5,8 +5,14 @@
     width        : 100%;
     height       : 100%;
     aspect-ratio : 1;
-    border-radius: 25px;
+    border-radius: 25%;
     overflow     : hidden;
+    transition   : transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), box-shadow 0.1s ease-in-out;
+
+    &:hover {
+      transform : scale(1.1);
+      box-shadow: 0 0 15px var(--color-mauve-tr);
+    }
   }
 
 
