--- a/src/sections/sections.module.scss
+++ b/src/sections/sections.module.scss
@@ -1,8 +1,9 @@
 .title {
-  font-family: 'San Francisco Rounded', ;
-  font-size  : clamp(32px, 15vw, 60px);
-  font-weight: 600;
-  text-align : center;
+  font-family  : 'San Francisco Rounded', ;
+  font-size    : clamp(32px, 15vw, 60px);
+  font-weight  : 600;
+  text-align   : center;
+  margin-bottom: 20px;
 }
 
 .webview {
