feat: added not found poge

--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -32,7 +32,7 @@
   left         : calc(50% - 27px/2 - 10px);
   top          : calc(50% - 27px/2);
   border-radius: 50%;
-  background   : var(--color-text);
+  background   : #eff1f5;
   transition   : all 0.2s ease-out;
   cursor       : pointer;
 }
